clang/test/BSC/Negative/Ownership/Borrow/borrow_two_level_ptr/borrow_two_level_ptr.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct S {
  int *_Borrow p;
};

int *_Borrow *_Owned test1(int *_Borrow *_Owned qq) {
  int value = 0;
  int *_Borrow b = &_Mut value;
  int *_Borrow *p = &b;
  int *_Borrow b2 = &_Mut **qq; // expected-note {{`**qq` is borrowed here}}
  **qq = 2; // expected-error {{cannot assign to `**qq` because it is borrowed}}
  *b = 5;
  *b2 = 10;
  return qq;
}

void test2() {
  int value = 0;
  int *_Borrow b = &_Mut value;
  int *_Borrow *p = &b;
  int *_Borrow b2 = &_Mut **p;
  *b = 5;
  *b2 = 10;
}

struct S *_Owned test3(struct S *_Owned qq) {
  int *_Borrow b2 = &_Mut *(qq->p); // expected-note {{`*(*qq).p` is borrowed here}}
  *(qq->p) = 4; // expected-error {{cannot assign to `*(*qq).p` because it is borrowed}}
  *b2 = 3;
  return qq;
}

void test4() {
  int value = 0;
  struct S s = { .p = &_Mut value };
  struct S *p = &s;
  int *_Borrow b = &_Mut *(p->p);
  *s.p = 2;
  *b =3;
}